# ib-practica12-oop-gtests-exercism-danielmdzrgz

ejerciciosPráctica12/complex/: CMakeLists.txt
ejerciciosPráctica12/complex/src/: complex.cc  complex.h  complex_main.cc
ejerciciosPráctica12/complex/tests/: addition_test.cc  division_test.cc  multiplication_test.cc  substraction_test.cc
ejerciciosPráctica12/dates/: CMakeLists.txt
ejerciciosPráctica12/dates/src/: dates.cc  dates.h  dates_main.cc
ejerciciosPráctica12/dates/tests/: gtest_main.cc  leapyear_test.cc  sorting_dates_test.cc
ejerciciosPráctica12/modification/: CMakeLists.txt
ejerciciosPráctica12/modification/src/: complex_mod.cc  complex_mod.h  complex_mod_main.cc
ejerciciosPráctica12/modification/tests/: addition_test.cc  division_test.cc  multiplication_test.cc  substraction_test.cc
